Update snackbar & statusbar options

--- a/sample/src/main/res/values/colors.xml
+++ b/sample/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
     <color name="redNavBar">#FF5E5E</color>
     <color name="redUrlText">#FFC9C9</color>
 
-    <color name="bluetatusBar">#048BFE</color>
+    <color name="blueStatusBar">#048BFE</color>
     <color name="blueNavBar">#2199FF</color>
     <color name="blueUrlText">#BADFFF</color>
 
