--- a/sample/src/main/res/layout/main.xml
+++ b/sample/src/main/res/layout/main.xml
@@ -9,35 +9,39 @@
         android:layout_width="match_parent"
         android:layout_height="64dp"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/selector_grey"
+        android:background="@color/finestWhite"
         android:onClick="onClick"
-        android:text="Default Theme" />
+        android:text="Default Theme"
+        android:textColor="@color/finestBlack" />
 
     <Button
         android:id="@+id/redTheme"
         android:layout_width="match_parent"
         android:layout_height="64dp"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/selector_grey"
+        android:background="@color/redNavBar"
         android:onClick="onClick"
-        android:text="Red Theme" />
+        android:text="Red Theme"
+        android:textColor="@color/finestWhite" />
 
     <Button
         android:id="@+id/blueTheme"
         android:layout_width="match_parent"
         android:layout_height="64dp"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/selector_grey"
+        android:background="@color/blueNavBar"
         android:onClick="onClick"
-        android:text="Blue Theme" />
+        android:text="Blue Theme"
+        android:textColor="@color/finestWhite" />
 
     <Button
         android:id="@+id/blackTheme"
         android:layout_width="match_parent"
         android:layout_height="64dp"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/selector_grey"
+        android:background="@color/blackNavBar"
         android:onClick="onClick"
-        android:text="Black Theme" />
+        android:text="Black Theme"
+        android:textColor="@color/finestWhite" />
 
 </LinearLayout>
