--- a/sample/src/main/res/layout/webview.xml
+++ b/sample/src/main/res/layout/webview.xml
@@ -1,83 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/finestWhite"
-    tools:context=".MainActivity"
-    >
+    tools:context=".MainActivity">
 
-  <!--<android.support.v4.widget.SwipeRefreshLayout-->
-  <!--android:id="@+id/swipeRefreshLayout"-->
-  <!--android:layout_width="match_parent"-->
-  <!--android:layout_height="match_parent"-->
-  <!--app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
-
-  <!--<android.support.v4.widget.NestedScrollView-->
-  <!--android:layout_width="match_parent"-->
-  <!--android:layout_height="match_parent">-->
-
-  <FrameLayout
-      android:id="@+id/webLayout"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      >
-
-    <WebView
-        android:id="@+id/webView"
+    <FrameLayout
+        android:id="@+id/webLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
-  </FrameLayout>
+        android:layout_height="match_parent">
 
-  <!--</android.support.v4.widget.NestedScrollView>-->
-  <!--</android.support.v4.widget.SwipeRefreshLayout>-->
+        <WebView
+            android:id="@+id/webView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-  <com.google.android.material.appbar.AppBarLayout
-      android:id="@+id/appBar"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      app:elevation="0dp"
-      >
+    </FrameLayout>
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:padding="0dp"
-        app:contentInsetEnd="0dp"
-        app:contentInsetLeft="0dp"
-        app:contentInsetRight="0dp"
-        app:contentInsetStart="0dp"
-        app:layout_scrollFlags="scroll|enterAlways"
-        >
+        app:elevation="0dp">
 
-      <include layout="@layout/toolbar_content"/>
-    </androidx.appcompat.widget.Toolbar>
-  </com.google.android.material.appbar.AppBarLayout>
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:padding="0dp"
+            app:contentInsetEnd="0dp"
+            app:contentInsetLeft="0dp"
+            app:contentInsetRight="0dp"
+            app:contentInsetStart="0dp"
+            app:layout_scrollFlags="scroll|enterAlways">
 
-  <View
-      android:id="@+id/gradient"
-      android:layout_width="match_parent"
-      android:layout_height="@dimen/defaultDividerHeight"
-      android:layout_marginTop="@dimen/toolbarHeight"
-      android:background="@color/finestBlack10"
-      />
+            <include layout="@layout/toolbar_content" />
 
-  <ProgressBar
-      android:id="@+id/progressBar"
-      android:layout_width="match_parent"
-      android:layout_height="@dimen/defaultProgressBarHeight"
-      android:layout_marginTop="@dimen/toolbarHeight"
-      android:indeterminate="false"
-      android:progressDrawable="@drawable/progress_drawable"
-      style="?android:attr/progressBarStyleHorizontal"
-      />
+        </androidx.appcompat.widget.Toolbar>
 
-  <include layout="@layout/menus"/>
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <View
+        android:id="@+id/gradient"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/defaultDividerHeight"
+        android:layout_marginTop="@dimen/toolbarHeight"
+        android:background="@color/finestBlack10" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/defaultProgressBarHeight"
+        android:layout_marginTop="@dimen/toolbarHeight"
+        android:indeterminate="false"
+        android:progressDrawable="@drawable/progress_drawable" />
+
+    <include layout="@layout/menus" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
